Fix spacing on top of main container

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,4 +1,5 @@
 .home-main {
+  margin-top: 90px;
   display: flex;
   flex-direction: column;
   .logout-button {
